--- a/app/src/main/res/layout/activity_registrar_cancha.xml
+++ b/app/src/main/res/layout/activity_registrar_cancha.xml
@@ -1,57 +1,74 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
-    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:background="@color/colorPrimaryLight"
+    android:orientation="vertical"
+    android:paddingBottom="@dimen/activity_vertical_margin"
+    android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:orientation="vertical"
-    android:background="@color/colorPrimaryLing"
     tools:context="com.tododeportes.tododeportesapp.gui.RegistrarCanchaActivity">
 
-    <ImageView
+    <ScrollView
+        android:id="@+id/scrol"
         android:layout_width="match_parent"
-        android:layout_height="120dp"
-        android:id="@+id/imageView"
-        android:src="@drawable/banner_registro" />
-
-    <TextView
-        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceLarge"
-        android:text="@string/titleRegistroCancha"
-        android:id="@+id/textView"
-        android:layout_gravity="center_horizontal"
-        android:layout_marginBottom="15dp" />
+        android:layout_margin="0dp"
+        android:background="@color/colorPrimaryLight">
 
-    <EditText
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/editText"
-        android:hint="@string/nombre_cancha"
-        android:layout_gravity="center_horizontal"
-        android:layout_marginBottom="13dp" />
 
-    <EditText
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/editText2"
-        android:hint="@string/nombre_cancha"
-        android:layout_gravity="center_horizontal"
-        android:layout_marginBottom="13dp"
-        android:text="@string/hint_address" />
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical">
 
-    <Spinner
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/spnTipo"
-        android:layout_marginBottom="13dp"
-        android:layout_gravity="center_horizontal" />
+                <ImageView
+                    android:id="@+id/imageView"
+                    android:layout_width="match_parent"
+                    android:layout_height="120dp"
+                    android:src="@drawable/banner_registro" />
 
-    <Spinner
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/spnSubtipo"
-        android:layout_marginBottom="13dp"
-        android:layout_gravity="center_horizontal" />
+                <TextView
+                    android:id="@+id/textView"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_horizontal"
+                    android:layout_marginBottom="15dp"
+                    android:text="@string/titleRegistroCancha"
+                    android:textAppearance="?android:attr/textAppearanceLarge" />
 
+                <EditText
+                    android:id="@+id/editText"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_horizontal"
+                    android:layout_marginBottom="13dp"
+                    android:hint="@string/nombre_cancha"
+                    android:maxLines="1" />
+
+                <EditText
+                    android:id="@+id/editText2"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_horizontal"
+                    android:layout_marginBottom="13dp"
+                    android:hint="@string/hint_address"
+                    android:maxLines="1" />
+
+                <Spinner
+                    android:id="@+id/spnTipo"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_horizontal"
+                    android:layout_marginBottom="13dp" />
+
+                <Spinner
+                    android:id="@+id/spnSubtipo"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_horizontal"
+                    android:layout_marginBottom="13dp" />
+            </LinearLayout>
+    </ScrollView>
 </LinearLayout>
