--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,6 +2,6 @@
 <resources>
     <color name="colorPrimary">#8BC34A</color>
     <color name="colorPrimaryDark">#558B2F</color>
-    <color name="colorPrimaryLing">#F1F8E9</color>
+    <color name="colorPrimaryLight">#F1F8E9</color>
     <color name="colorAccent">#795548</color>
 </resources>
