--- a/app/src/main/res/layout/content_listar_personas.xml
+++ b/app/src/main/res/layout/content_listar_personas.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -8,13 +9,16 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context=".gui.ListarCanchasActivity">
+    app:layout_behavior="@string/appbar_scrolling_view_behavior"
+    tools:context="com.tododeportes.tododeportesapp.gui.ListarPersonasActivity"
+    tools:showIn="@layout/activity_listar_personas">
 
-    <android.support.v7.widget.RecyclerView
-        android:id="@+id/rvCanchas"
+    <android.support.v7.widget.RecyclerView xmlns:android="http://schemas.android.com/apk/res/android"
+        android:id="@+id/rvPersonas"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:padding="3dp"
+        android:scrollbars="vertical" />
 
-    </android.support.v7.widget.RecyclerView>
 
 </RelativeLayout>
