Se agrega ProgressBar mientras carga lista

--- a/app/src/main/res/layout/item_adapter_cancha.xml
+++ b/app/src/main/res/layout/item_adapter_cancha.xml
@@ -5,8 +5,7 @@
     android:layout_height="wrap_content"
     android:orientation="horizontal"
     android:id="@+id/layFieldInfo"
-    android:padding="@dimen/activity_horizontal_margin"
-    android:background="@color/hint_foreground_material_dark">
+    android:padding="@dimen/activity_horizontal_margin">
 
 
     <ImageView
