--- a/app/src/main/res/layout/activity_listar_canchas.xml
+++ b/app/src/main/res/layout/activity_listar_canchas.xml
@@ -4,17 +4,21 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/colorPrimaryLight"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
     tools:context=".gui.ListarCanchasActivity">
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/rvCanchas"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:visibility="gone">
 
     </android.support.v7.widget.RecyclerView>
+
+    <ProgressBar
+        style="?android:attr/progressBarStyleLarge"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/pgbLoadingFields"
+        android:layout_centerInParent="true" />
 
 </RelativeLayout>
