--- a/app/src/main/res/layout/activity_listar_canchas.xml
+++ b/app/src/main/res/layout/activity_listar_canchas.xml
@@ -21,4 +21,13 @@
         android:id="@+id/pgbLoadingFields"
         android:layout_centerInParent="true" />
 
+    <android.support.design.widget.FloatingActionButton
+        android:id="@+id/fab_add_field"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentRight="true"
+        android:layout_margin="@dimen/fab_margin"
+        android:src="@android:drawable/ic_input_add" />
+
 </RelativeLayout>
