Se mejora la vista de ListarUsuariosActivity y se mejora RegistrarUsuarioActivity

--- a/app/src/main/res/layout/activity_registrar_usuario.xml
+++ b/app/src/main/res/layout/activity_registrar_usuario.xml
@@ -29,9 +29,18 @@
                 android:layout_weight="3"
                 android:src="@drawable/img_banner_registro_cancha" />
 
+            <Spinner
+                android:id="@+id/spnTipoDocumento"
+                android:layout_width="220dp"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_horizontal"
+                android:layout_marginBottom="13dp"
+                android:padding="7dp"
+                android:textAppearance="?android:attr/textAppearanceLarge" />
+
             <EditText
                 android:id="@+id/identificacion"
-                android:layout_width="200dp"
+                android:layout_width="220dp"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_horizontal"
                 android:layout_weight="1"
@@ -102,6 +111,19 @@
                 android:textAppearance="?android:attr/textAppearanceLarge" />
 
             <EditText
+                android:id="@+id/telefonoCelular"
+                android:layout_width="200dp"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_horizontal"
+                android:layout_weight="1"
+                android:gravity="center"
+                android:hint="@string/campoTelefonoCelular"
+                android:inputType="phone"
+                android:singleLine="true"
+                android:textAppearance="?android:attr/textAppearanceLarge" />
+
+
+            <EditText
                 android:id="@+id/email"
                 android:layout_width="200dp"
                 android:layout_height="wrap_content"
@@ -112,6 +134,16 @@
                 android:inputType="textEmailAddress"
                 android:singleLine="true"
                 android:textAppearance="?android:attr/textAppearanceLarge" />
+
+            <Button
+                android:id="@+id/boton_guardar"
+                style="?android:attr/buttonStyleSmall"
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:layout_gravity="center_horizontal"
+                android:layout_weight="1"
+                android:onClick="guardar"
+                android:text="@string/textBotonGuardar" />
 
         </LinearLayout>
     </ScrollView>
