--- a/app/src/main/res/layout/content_listar_personas.xml
+++ b/app/src/main/res/layout/content_listar_personas.xml
@@ -20,5 +20,11 @@
         android:padding="3dp"
         android:scrollbars="vertical" />
 
+    <ProgressBar
+        android:id="@+id/pgbLoadingFields"
+        style="?android:attr/progressBarStyleLarge"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerInParent="true" />
 
 </RelativeLayout>
