- Registro de cancha en el servidor - Actualización de lista de canchas - Optimización de imports

--- a/app/src/main/res/menu/menu_listar_cancha.xml
+++ b/app/src/main/res/menu/menu_listar_cancha.xml
@@ -2,6 +2,6 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     tools:context="com.tododeportes.tododeportesapp.gui.RegistrarCanchaActivity">
-    <item android:id="@+id/action_save_cancha" android:title="@string/saveCancha"
-        android:orderInCategory="100" app:showAsAction="always|withText" android:icon="@drawable/ic_done_white"/>
+    <item android:id="@+id/action_update_list" android:title="@string/update_canchas"
+        android:orderInCategory="100" app:showAsAction="always|withText" android:icon="@drawable/ic_update_white"/>
 </menu>
