--- a/app/src/main/res/layout/activity_registrar_cancha.xml
+++ b/app/src/main/res/layout/activity_registrar_cancha.xml
@@ -23,43 +23,33 @@
                 android:layout_height="wrap_content"
                 android:orientation="vertical">
 
-                <ImageView
-                    android:id="@+id/imageView"
-                    android:layout_width="match_parent"
-                    android:layout_height="120dp"
-                    android:src="@drawable/img_banner_registro_cancha" />
-
                 <EditText
-                    android:id="@+id/editText"
-                    android:layout_width="wrap_content"
+                    android:id="@+id/edt_field_name"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_horizontal"
                     android:layout_marginBottom="13dp"
                     android:hint="@string/nombre_cancha"
-                    android:maxLines="1" />
-
-                <EditText
-                    android:id="@+id/editText2"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center_horizontal"
-                    android:layout_marginBottom="13dp"
-                    android:hint="@string/hint_address"
-                    android:maxLines="1" />
+                    android:maxLines="1"
+                    android:background="@drawable/edit_text_style" />
 
                 <Spinner
                     android:id="@+id/spnTipo"
-                    android:layout_width="wrap_content"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_horizontal"
-                    android:layout_marginBottom="13dp" />
+                    android:layout_marginBottom="13dp"
+                    android:spinnerMode="dialog"
+                    android:background="@drawable/spinner_style" />
 
                 <Spinner
                     android:id="@+id/spnSubtipo"
-                    android:layout_width="wrap_content"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_horizontal"
-                    android:layout_marginBottom="13dp" />
+                    android:spinnerMode="dialog"
+                    android:layout_marginBottom="13dp"
+                    android:background="@drawable/spinner_style" />
             </LinearLayout>
     </ScrollView>
 </LinearLayout>
