--- a/app/src/main/res/layout/item_adapter_cancha.xml
+++ b/app/src/main/res/layout/item_adapter_cancha.xml
@@ -12,7 +12,8 @@
         android:id="@+id/imgSportIcon"
         android:layout_width="64dp"
         android:layout_height="64dp"
-        android:layout_marginRight="15dp" />
+        android:layout_marginRight="15dp"
+        android:layout_gravity="center_vertical" />
 
     <LinearLayout
         android:layout_width="match_parent"
